# RAI026-LLM-Server

./: .gitignore  README.md
llm-server/: .env.example  docker-compose.yml  pyproject.toml  run.sh  setup_rai026_env.sh
llm-server/.devcontainer/: Dockerfile  devcontainer.json
llm-server/app/: config.py  main.py  models.py  services.py
llm-server/app/prompts/: system_prompt.txt
llm-server/app/providers/: base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
llm-server/notebooks/: smoke_test.ipynb
