[project]
name = "rai026-llm-server"
version = "0.1.0"
description = "LLM server and notebook environment for RAI-026"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.31.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel==6.29.5",
  "jupyter==1.1.1",
]
